// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render shipping methods as expected 1`] = `
<div>
  <div
    className="c-checkout__addressform"
  >
    <div
      className="o-form__address"
    >
      <AddressFormSummary
        city="Leeds"
        firstName="First Name"
        lastName="Last Name"
        onClick={[Function]}
        showEditButton={true}
      />
    </div>
  </div>
  <Loading />
</div>
`;

exports[`renders correct checkout components 1`] = `
<div>
  <div
    className="c-checkout__addressform"
  >
    <div
      className="o-form__address"
    >
      <AddressFormSummary
        onClick={[Function]}
        showEditButton={true}
      />
    </div>
  </div>
  <Loading />
</div>
`;

exports[`renders line item quantity as expected 1`] = `
<div>
  <div
    className="c-checkout__addressform"
  >
    <div
      className="o-form__address"
    >
      <AddressFormSummary
        city="Leeds"
        firstName="First Name"
        lastName="Last Name"
        onClick={[Function]}
        showEditButton={true}
      />
    </div>
  </div>
  <ShippingMethods
    cartLineItemsCount={0}
    cartShippingMethod={
      Object {
        "id": 1,
        "label": "Standard shipping",
        "meta_attributes": Object {
          "working_days": Object {
            "value": 2,
          },
        },
        "sku": "STA_SHIP",
        "total": 3.75,
      }
    }
    handleFormSubmit={[Function]}
    handleSetShippingMethod={[Function]}
    isThirdPartyPayment={false}
    shippingMethods={Array []}
  />
</div>
`;
